# ADNarrativa

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION_STATUS.md  OPERATING_GUIDE.md  PROJECT_CHARTER.md  README.md  narrative_dna_codex_prompts (1).json  pyproject.toml
-1wOnr7JsS4/: transcript.txt  transcript_metadata.json
0QtQXR__SpY/: transcript_metadata.json
2rXcq6fXpiM/: transcript_insights.json  transcript_segments.jsonl
3QLkDi3e9j4/: transcript_insights.json  transcript_segments.jsonl
3Qe_PQFBRVQ/: transcript.txt  transcript_insights.json  transcript_metadata.json
3SFlwYVEubU/: transcript_segments.jsonl
48SDCMT55I4/: transcript.txt  transcript_insights.json  transcript_segments.jsonl
4LFP-oTXUN8/: transcript.txt  transcript_segments.jsonl
4Y94xhZcF0U/: transcript.txt  transcript_metadata.json  transcript_segments.jsonl
4a4Sgh76efw/: transcript.txt  transcript_insights.json
4yDM3ZFcQm4/: transcript.txt
5OPXXtUC3x0/: transcript_segments.jsonl
6F9wx2w-3_c/: transcript.txt  transcript_insights.json  transcript_metadata.json  transcript_segments.jsonl
6hNY0K71Ewo/: transcript_insights.json
7F4pY8Td9QQ/: transcript_insights.json  transcript_metadata.json  transcript_segments.jsonl
8Vq_Vm8Pe9Y/: transcript.txt  transcript_metadata.json
9g8Bz0ugi1I/: transcript.txt  transcript_insights.json  transcript_metadata.json  transcript_segments.jsonl
9uEU6bWB6_4/: transcript_insights.json  transcript_metadata.json
AkI8KyvktaY/: transcript.txt
ArA_8v8LTfY/: transcript.txt  transcript_insights.json  (+2 more)
(+251 files in other folders)
