[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "narrative-dna"
version = "0.1.0"
description = "JSON-first tools for stable, interpretable, auditable narrative DNA annotation."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "narrative_dna maintainers" }
]
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "rich>=13.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]

[project.scripts]
narrative-dna = "narrative_dna.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
